<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/masuk10"
    android:orientation="vertical"
    android:gravity="center">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="122dp"
        android:layout_height="123dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        app:srcCompat="@mipmap/ic_launcher_foreground"
        tools:layout_editor_absoluteX="106dp"
        tools:layout_editor_absoluteY="5dp" />

    <EditText
        android:id="@+id/et_usuario"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="228dp"
        android:background="@drawable/borda_edittext"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:textColorHint="@color/colorWhite"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="233dp" />

    <EditText
        android:id="@+id/et_senha"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="226dp"
        android:background="@drawable/borda_edittext"
        android:ems="10"
        android:hint="@string/senha"
        android:inputType="textPassword"
        android:textColorHint="@color/colorWhite"
        tools:layout_editor_absoluteX="72dp"
        tools:layout_editor_absoluteY="316dp" />

    <Button
        android:id="@+id/bt_gmail"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/bt_facebook"
        android:layout_marginStart="42dp"
        android:background="@drawable/bt_facebook_borda"
        android:text="@string/facebook"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="421dp" />

    <Button
        android:id="@+id/bt_facebook"
        android:layout_width="123dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="111dp"
        android:layout_marginEnd="41dp"
        android:background="@drawable/bt_gmail_borda"
        android:text="@string/gmail"
        tools:layout_editor_absoluteX="205dp"
        tools:layout_editor_absoluteY="421dp" />

    <Button
        android:id="@+id/bt_login"
        android:layout_width="183dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="45dp"
        android:background="@drawable/borda_bt_cadastrar"
        android:text="@string/login"
        tools:layout_editor_absoluteX="89dp"
        tools:layout_editor_absoluteY="488dp" />

    <TextView
        android:id="@+id/tv_cadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="196dp"
        android:text="@string/nao_e_cadastrado_clique_aqui"
        android:textColor="@color/colorWhite"
        tools:layout_editor_absoluteX="83dp"
        tools:layout_editor_absoluteY="382dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="139dp"
        android:text="@string/login"
        android:textColor="@color/colorWhite"
        android:textSize="40dp"
        tools:layout_editor_absoluteX="131dp"
        tools:layout_editor_absoluteY="166dp" />
</RelativeLayout>